--- a/src/index.sass
+++ b/src/index.sass
@@ -4,26 +4,25 @@
   padding: 0
   margin: 0
 
-  body
-    background: url($default-background) top center no-repeat
-    font-family: $default-font
-
-#root .container
-  margin-top: 80px
-  height: calc(100vh - 80px)
-  width: 100vw
-
-@media (min-width: 768px)
-  body
-    background: url($default-background) top $navbar-height left no-repeat
-    background-size: 40vw auto
+body
+  background: url($default-background) top $navbar-height center no-repeat
+  background-size: cover
 
   #root .container
-    margin-top: 80px
-    height: calc(100vh - 80px)
-    width: 60vw
-    margin-left: 40vw
-    & p
-      color: rgba(0,0,0,.8)
-      font-size: 1.5rem
-      line-height: 2.5rem
+    top: $navbar-height
+    padding-top: $navbar-height + 50px
+    min-height: 100vh
+    height: 100%
+    width: 90%
+
+    & h1, h2, h3, h4, h5, h6
+      font-family: $primary-font
+
+    & .site-link
+      color: $link-color
+
+    & .content
+      font-size: 1.3rem
+
+      & p
+        @include p-text( rgba(0,0,0,1), rgba(200, 200, 200, 1))
